--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html>
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7JXTBTCZZB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VTM4PERFJ7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-7JXTBTCZZB');
+  gtag('config', 'G-VTM4PERFJ7');
 </script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-W5QD44F');</script>
-    <!-- End Google Tag Manager -->
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PGLPFVF');</script>
+<!-- End Google Tag Manager --> 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 #overlay {
@@ -34,11 +33,12 @@
     cursor: pointer;
 }
 </style>
-</head><body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W5QD44F"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+</head>
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56R9D4V"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div id="overlay" onclick="off()"><h1>Hay</h1></div>
 <button onclick="on()">Turn on overlay effect</button><script>
 function on() {
