--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56R9D4V"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<div id="overlay" onclick="off()"><h1>Hay</h1></div>
+<div id="overlay" onclick="off()">
+  <img src="https://nd.natureasia.com/figure/7026/99254/phone/1" alt="「教えて! goo for OCN」は、お客様同士で疑問を解決できるQ&amp;Aコミュニティサイトの画像">
+  </div>
 <button onclick="on()">Turn on overlay effect</button><script>
 function on() {
     document.getElementById("overlay").style.display = "block";
