--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-VTM4PERFJ7');
 </script>
 <!-- Google Tag Manager -->
@@ -40,7 +39,49 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <div id="overlay" onclick="off()">
-  <img src="https://nd.natureasia.com/figure/7026/99254/phone/1" alt="「教えて! goo for OCN」は、お客様同士で疑問を解決できるQ&amp;Aコミュニティサイトの画像">
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-W5QD44F');</script>
+    <!-- End Google Tag Manager -->
+<style>
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+}
+</style>
+</head><body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W5QD44F"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+<div id="overlay" onclick="off()">
+<img src="https://nd.natureasia.com/figure/7026/99254/phone/1" alt="「教えて! goo for OCN」は、お客様同士で疑問を解決できるQ&amp;Aコミュニティサイトの画像" class="tracking" />
+</div>
+<button onclick="on()">Turn on overlay effect</button><script>
+function on() {
+    document.getElementById("overlay").style.display = "block";
+}function off() {
+    document.getElementById("overlay").style.display = "none";
+}
+</script>  
+</body>
+</html>
   </div>
 <button onclick="on()">Turn on overlay effect</button><script>
 function on() {
