--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 <div id="overlay" onclick="off()">
-<img src="https://nd.natureasia.com/figure/7026/99254/phone/1" alt="「教えて! goo for OCN」は、お客様同士で疑問を解決できるQ&amp;Aコミュニティサイトの画像" class="tracking">
+<img src="https://nd.natureasia.com/figure/7026/99254/phone/1" alt="「教えて! goo for OCN」は、お客様同士で疑問を解決できるQ&amp;Aコミュニティサイトの画像" id="tracking">
 </div>
 <button onclick="on()">Turn on overlay effect</button><script>
 function on() {
