--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div id="overlay" onclick="off()">
 <img src="https://nd.natureasia.com/figure/7026/99254/phone/1" alt="「教えて! goo for OCN」は、お客様同士で疑問を解決できるQ&amp;Aコミュニティサイトの画像" id="tracking">
 </div>
-<button class="tora">Turn on overlay effect</button>
+<button>Turn on overlay effect</button>
     <script>
 function on() {
     document.getElementById("overlay").style.display = "block";
