--- a/index.html
+++ b/index.html
@@ -2,13 +2,6 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-W5QD44F');</script>
-    <!-- End Google Tag Manager -->
 <style>
 #overlay {
     position: fixed;
@@ -25,13 +18,7 @@
 }
 </style>
 </head><body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W5QD44F"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-<div id="overlay" onclick="off()">
-    <img src="https://nd.natureasia.com/figure/7026/99254/phone/1" alt="「教えて! goo for OCN」は、お客様同士で疑問を解決できるQ&amp;Aコミュニティサイトの画像"  class="aligncenter">
-</div>
+<div id="overlay" onclick="off()"><h1>Hay</h1></div>
 <button onclick="on()">Turn on overlay effect</button><script>
 function on() {
     document.getElementById("overlay").style.display = "block";
