--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PGLPFVF');</script>
+})(window,document,'script','dataLayer','GTM-WBTPH3G');</script>
 <!-- End Google Tag Manager -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-192231824-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-206745014-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'UA-192231824-1');
+
+  gtag('config', 'UA-206745014-1');
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <meta charset="UTF-8">
